# Garlic

./: .clang-tidy  CMakeLists.txt
Clove/: CMakeLists.txt
Clove/include/Clove/Core/: Layer.hpp  LayerStack.hpp
Clove/modules/maths/: CMakeLists.txt  Matrix.hpp  Matrix.inl  MatrixMath.hpp  MatrixMath.inl  Quaternion.hpp  Quaternion.inl  Temp.cpp  Test.cpp  Vector.hpp  Vector.inl  VectorMath.hpp  VectorMath.inl
Clove/src/Core/: Layer.cpp  LayerStack.cpp
Clove/src/Graphics/Core/: ShaderTranspiler.cpp
Clove/src/Graphics/OpenGL/: GLCommandBuffer.cpp  GLPipelineObject.cpp  GLRenderTarget.cpp  GLShader.cpp  GLXSurface.cpp
Clove/src/Graphics/OpenGL/Resources/: GLTexture.cpp
Clove/src/Platform/Linux/: LinuxWindow.cpp
Tunic/include/Tunic/ECS/2D/Components/: SpriteComponent.hpp  TransformComponent.hpp
Tunic/include/Tunic/ECS/3D/Components/: MeshComponent.hpp
Tunic/include/Tunic/ECS/UI/Components/: TransformComponent.hpp
Tunic/include/Tunic/Rendering/Renderables/: Mesh.hpp
Tunic/src/: Application.cpp
Tunic/src/ECS/2D/Components/: RigidBodyComponent.cpp  SpriteComponent.cpp  TransformComponent.cpp
Tunic/src/ECS/2D/Systems/: PhysicsSystem.cpp  RenderSystem.cpp
Tunic/src/ECS/3D/Components/: CameraComponent.cpp  MeshComponent.cpp  RigidBodyComponent.cpp  TransformComponent.cpp
Tunic/src/ECS/3D/Systems/: PhysicsSystem.cpp
Tunic/src/ECS/Audio/Systems/: AudioSystem.cpp
Tunic/src/ECS/UI/Components/: TransformComponent.cpp
Tunic/src/Rendering/Renderables/: Mesh.cpp
